TKWAR-50 - First implementation of the SpatialHash object